[package]
name = "alpaca-rust"
version = "0.1.0"
authors = ["Stephan Dilly <dilly.stephan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http="0.1"
rest-api = { version = "", path = "rest-api" }
serde = "1.0"
serde_json = "1.0"
reqwest= "0.9"